SPL-5740 - Fixed misaligned numbers on firefox

--- a/projects/bf-ui-lib/scss/bf-keypad.scss
+++ b/projects/bf-ui-lib/scss/bf-keypad.scss
@@ -19,16 +19,22 @@ bf-keypad {
   }
 
   .bf-keypad {
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    align-items: center;
+    justify-content: center;
+    grid-gap: 5px;
+
     padding: 0;
-    margin: 0;
     width: 70%;
     margin: auto;
   
     li {
-      width: calc(100% / 3);
-      display: inline-flex;
-      padding: 5px 0;
+      display: flex;
       justify-content: center;
+      height: 100%;
+      align-content: flex-start;
     }
   }
 }
